# EmbedPy

./: .gitignore  Makefile.am  README.md  configure.ac
cli/: cmdline.cc  cmdline.h  main.cc
common/: fileCompilerContext.cc
compiler/: fileCompilerContext.cc  interactiveCompilerContext.cc
examples/: function.py  if.py  numbers.py  operators.py
include/embedpy/: ast.h  context.h  error.h  token.h
parser/: lexer.cc  parser.cc  token.cc
