AC_INIT([EmbedPy], [0.1], [contact@nanodesign.com.au], [embedpy], [http://embedpy.nanodesign.com.au])
AC_PREREQ([2.59])

AM_INIT_AUTOMAKE([1.11 no-define foreign])
AM_SILENT_RULES([yes])

AC_CONFIG_MACRO_DIR([m4])

LT_INIT

AC_CONFIG_HEADERS([config.h])

AC_PROG_CXX

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
